--- a/src/GGL.Web.App/package.json
+++ b/src/GGL.Web.App/package.json
@@ -26,10 +26,11 @@
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "@ngx-translate/core": "^12.1.2",
     "angular-ui-carousel": "^0.1.10",
+    "axios": "^1.6.7",
     "core-js": "^3.1.4",
+    "express": "^4.18.2",
     "hammerjs": "^2.0.8",
     "ngx-toastr": "^10.0.4",
-    "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
