--- a/src/GGL.Web.App/package.json
+++ b/src/GGL.Web.App/package.json
@@ -25,11 +25,14 @@
     "@angular/ssr": "^17.0.10",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "@ngx-translate/core": "^12.1.2",
+    "angular-calendar-scheduler": "^16.0.0",
+    "angular-moment": "^1.3.0",
     "angular-ui-carousel": "^0.1.10",
-    "axios": "^1.6.7",
     "core-js": "^3.1.4",
+    "date-fns": "^3.3.1",
     "express": "^4.18.2",
     "hammerjs": "^2.0.8",
+    "moment": "^2.30.1",
     "ngx-toastr": "^10.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
