--- a/src/GGL.Web.App/package.json
+++ b/src/GGL.Web.App/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "@ngx-translate/core": "^12.1.2",
     "angular-calendar-scheduler": "^16.0.0",
+    "angular-material-icons": "^0.7.1",
     "angular-moment": "^1.3.0",
     "angular-ui-carousel": "^0.1.10",
     "core-js": "^3.1.4",
